11/22/10 rename CLModelElementDragHandler to CLLocationDragHandler, move to view package
11/22/10 consolidate duplicate drag handler code in base class CLModelElementDragHandler
11/22/10 add voltmeter body location to model, constrain to world bounds in model
11/22/10 remove duplicate drag constraints in model & view, consolidate model, provide constraint utility in World
11/22/10 use observer pattern in setting of dielectric transparency
11/22/10 move some responsibilities from CapacitorNode to DielectricNode
11/22/10 convert CapacitorNode and DielectricNode to Property<T>
11/22/10 remove obsolete dev parameters in various view constructors
# 0.00.49 (46408) Nov 19, 2010
11/19/10 try E-Field probe image with gray outline around crosshairs (origin adjustment required)
11/19/10 change scaling exponent to 1/4 for dielectric charge offset
# 0.00.48 (46406) Nov 19, 2010
11/19/10 demo color tweaks to E-Field Detector
11/19/10 make E-Field Detector wire gray, to distinguish it from black voltmeter wire
11/19/10 make E-Field Detector body dark gray, so that black voltmeter wire is visible on top of it
# 0.00.47 (46404) Nov 19, 2010
11/19/10 adjust default location of voltmeter body and probes
11/19/10 rename ModelViewTransform to CLModelViewTransform3D because there are way too many ModelViewTransform implementations in PhET
11/18/10 fix: derive capacitance properties when custom dielectric constant changes
11/18/10 make only negative charges move in dielectric "Show all charges" view
11/18/10 start E-Field Detector zoom level at max magnification, appropriate for battery
11/17/10 make dielectric transparent when voltmeter is selected so bottom plate can be touched through the battery
11/17/10 reset custom dielectric material in model.reset
11/17/10 convert DielectricMaterial to Property<T>
11/17/10 implement Battery.reset and Capacitor.reset, use them in DielectricModel.reset