@@ -16,7 +16,7 @@ DESIGN ISSUES
 - what happens when meters are in the way while building circuits?
 
 HIGH PRIORITY
-- add body locations to voltmeter and E-field detector models
+- add meter body bounds to model
 - add model elements with value and visibility properties for bar meters
 - move shape stuff out of Wire and into WireShapeFactory, to be consistent with all other patterns
 - better encapsulation of ShapeFactory approach to measurement, move out of model and into a strategy pattern
